# edge_vector_index

./: .gitignore  README.md
app/: Cargo.toml
app/benches/: main.rs
app/src/: main.rs
dart/main/: pubspec.yaml
dart/main/lib/: interop.dart  main.dart
dotnet/: EdgeVectorIndex.sln
dotnet/EdgeVectorIndex/: EdgeVectorIndex.csproj  Interop.cs  Store.cs
dotnet/Main/: Benchmark.cs  EdgeVectorIndexLocal.cs  Main.csproj  Program.cs
js/: edge_vector_store_local.js  index.html
lib/: Cargo.toml
lib/bindings/: interop.h
lib/src/: interop.rs  interop_wasm.rs  lib.rs  similarity.rs
lib/tests/: bindings.rs
python/edge_vector_index/: interop.py  store.py
python/main/: app.py  benchmarks.py  local_store.py
